--- a/com.restaurantProject/test-output/old/Default suite/methods.html
+++ b/com.restaurantProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b06cab">  <td>23/02/16 09:39:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:executeClass.CustomersPageTestClass@4135c3b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="9e6fbd">  <td>23/02/16 09:39:13</td>   <td>4568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomersPageTestClass.verifyToAddaNewCustomer()[pri:3, instance:executeClass.CustomersPageTestClass@4135c3b]">verifyToAddaNewCustomer</td> 
-  <td>main@391630194</td>   <td></td> </tr>
-<tr bgcolor="b06cab">  <td>23/02/16 09:39:22</td>   <td>13415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:executeClass.CustomersPageTestClass@4135c3b]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@391630194</td>   <td></td> </tr>
+<tr bgcolor="b06cab">  <td>23/02/16 17:35:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:executeClass.ProductPageTestClass@6302bbb1]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="9e6fbd">  <td>23/02/16 17:34:45</td>   <td>-15659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyProductPageIsOpenedWhileClickingProductTab()[pri:1, instance:executeClass.ProductPageTestClass@6302bbb1]">verifyProductPageIsOpenedWhileClickingProductTab</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="b06cab">  <td>23/02/16 17:34:40</td>   <td>-20463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:executeClass.ProductPageTestClass@6302bbb1]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
 </table>
