--- a/com.restaurantProject/test-output/index.html
+++ b/com.restaurantProject/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-489210580\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse-1605287532\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="executeClass.CustomersPageTestClass" class="method navigator-link" hash-for-method="verifyToAddaNewCustomer">verifyToAddaNewCustomer</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="executeClass.ProductPageTestClass" class="method navigator-link" hash-for-method="verifyProductPageIsOpenedWhileClickingProductTab">verifyProductPageIsOpenedWhileClickingProductTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">executeClass.CustomersPageTestClass</span>
+              <span class="class-name">executeClass.ProductPageTestClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyToAddaNewCustomer">
-                  </a> <!-- verifyToAddaNewCustomer -->
-                  <span class="method-name">verifyToAddaNewCustomer</span>
+                  <a name="verifyProductPageIsOpenedWhileClickingProductTab">
+                  </a> <!-- verifyProductPageIsOpenedWhileClickingProductTab -->
+                  <span class="method-name">verifyProductPageIsOpenedWhileClickingProductTab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-489210580\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse-1605287532\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;executeClass.CustomersPageTestClass&quot;&gt;
+      &lt;class name=&quot;executeClass.ProductPageTestClass&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyToAddaNewCustomer&quot;/&gt;
+          &lt;include name=&quot;verifyProductPageIsOpenedWhileClickingProductTab&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- executeClass.CustomersPageTestClass --&gt;
+      &lt;/class&gt; &lt;!-- executeClass.ProductPageTestClass --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyToAddaNewCustomer')
-data.setCell(0, 2, 'executeClass.CustomersPageTestClass')
-data.setCell(0, 3, 8845);
+data.setCell(0, 1, 'verifyProductPageIsOpenedWhileClickingProductTab')
+data.setCell(0, 2, 'executeClass.ProductPageTestClass')
+data.setCell(0, 3, 15654);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,19 +213,21 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">executeClass.CustomersPageTestClass</span>
+              <span class="ignored-class-name">executeClass.ProductPageTestClass</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyToSearchACustomerByUsingNAme</span>
+                <span class="ignored-method-name">verifyAddNewProduct</span>
                 <br/>
-                <span class="ignored-method-name">verifyToSearchACustomerByUsingMobileNumber</span>
+                <span class="ignored-method-name">verifyEditFunctionalityOfProduct</span>
                 <br/>
-                <span class="ignored-method-name">verifyAddCustomerButtonIsVisibleOrNot</span>
+                <span class="ignored-method-name">verifySearchFunctionalityUsingProductName</span>
                 <br/>
-                <span class="ignored-method-name">verifyCustomersPageIsVisibleByClickingOnCutomerOnPeopleTab</span>
+                <span class="ignored-method-name">verifyDeleteFunctionalityOfProduct</span>
+                <br/>
+                <span class="ignored-method-name">verifySearchFunctionalityUsingProductCode</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -237,18 +239,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">executeClass.CustomersPageTestClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">executeClass.ProductPageTestClass</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyToAddaNewCustomer</span>
-                <span class="method-start">4572 ms</span>
+                <span class="method-name">verifyProductPageIsOpenedWhileClickingProductTab</span>
+                <span class="method-start">4809 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">13418 ms</span>
+                <span class="method-start">20467 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
