--- a/com.restaurantProject/test-output/old/Default suite/classes.html
+++ b/com.restaurantProject/test-output/old/Default suite/classes.html
@@ -4,30 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>executeClass.CustomersPageTestClass</td>
+<td>executeClass.ProductPageTestClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyToAddaNewCustomer</td>
+<td>verifySearchFunctionalityUsingProductCode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddCustomerButtonIsVisibleOrNot</td>
+<td>verifyProductPageIsOpenedWhileClickingProductTab</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyToSearchACustomerByUsingNAme</td>
+<td>verifyDeleteFunctionalityOfProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCustomersPageIsVisibleByClickingOnCutomerOnPeopleTab</td>
+<td>verifySearchFunctionalityUsingProductName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyToSearchACustomerByUsingMobileNumber</td>
+<td>verifyAddNewProduct</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyEditFunctionalityOfProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
