--- a/com.restaurantProject/test-output/old/Default suite/methods-not-run.html
+++ b/com.restaurantProject/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>executeClass.CustomersPageTestClass.verifyToSearchACustomerByUsingNAme</td></tr>
-<tr><td>executeClass.CustomersPageTestClass.verifyToSearchACustomerByUsingMobileNumber</td></tr>
-<tr><td>executeClass.CustomersPageTestClass.verifyAddCustomerButtonIsVisibleOrNot</td></tr>
-<tr><td>executeClass.CustomersPageTestClass.verifyCustomersPageIsVisibleByClickingOnCutomerOnPeopleTab</td></tr>
+<tr><td>executeClass.ProductPageTestClass.verifyAddNewProduct</td></tr>
+<tr><td>executeClass.ProductPageTestClass.verifyEditFunctionalityOfProduct</td></tr>
+<tr><td>executeClass.ProductPageTestClass.verifySearchFunctionalityUsingProductName</td></tr>
+<tr><td>executeClass.ProductPageTestClass.verifyDeleteFunctionalityOfProduct</td></tr>
+<tr><td>executeClass.ProductPageTestClass.verifySearchFunctionalityUsingProductCode</td></tr>
 </table>
