--- a/com.restaurantProject/test-output/old/Default suite/groups.html
+++ b/com.restaurantProject/test-output/old/Default suite/groups.html
@@ -1,1 +1,7 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>add</td><td>ProductPageTestClass.verifyAddNewProduct()[pri:2, instance:executeClass.ProductPageTestClass@78691363]<br/></td></tr>
+<tr><td>delete</td><td>ProductPageTestClass.verifyDeleteFunctionalityOfProduct()[pri:6, instance:executeClass.ProductPageTestClass@78691363]<br/></td></tr>
+<tr><td>edit</td><td>ProductPageTestClass.verifyEditFunctionalityOfProduct()[pri:5, instance:executeClass.ProductPageTestClass@78691363]<br/></td></tr>
+<tr><td>group-1</td><td>ProductPageTestClass.verifyProductPageIsOpenedWhileClickingProductTab()[pri:1, instance:executeClass.ProductPageTestClass@78691363]<br/></td></tr>
+<tr><td>search</td><td>ProductPageTestClass.verifySearchFunctionalityUsingProductName()[pri:3, instance:executeClass.ProductPageTestClass@78691363]<br/>ProductPageTestClass.verifySearchFunctionalityUsingProductCode()[pri:4, instance:executeClass.ProductPageTestClass@78691363]<br/></td></tr>
+</table>
