--- a/com.restaurantProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.restaurantProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b06cab">  <td>23/02/16 17:35:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:executeClass.ProductPageTestClass@6302bbb1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="b06cab">  <td>23/02/16 17:34:40</td>   <td>-20463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:executeClass.ProductPageTestClass@6302bbb1]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="9e6fbd">  <td>23/02/16 17:34:45</td>   <td>-15659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyProductPageIsOpenedWhileClickingProductTab()[pri:1, instance:executeClass.ProductPageTestClass@6302bbb1]">verifyProductPageIsOpenedWhileClickingProductTab</td> 
-  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:15:27</td>   <td>-65503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/28 14:11:08</td>   <td>-323726</td> <td title="&gt;&gt;BaseClass.createReport(org.testng.ITestContext)[pri:0, instance:executeClass.ProductPageTestClass@78691363]">&gt;&gt;createReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:11:55</td>   <td>-277548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyAddNewProduct()[pri:2, instance:executeClass.ProductPageTestClass@78691363]">verifyAddNewProduct</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:15:37</td>   <td>-54723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyDeleteFunctionalityOfProduct()[pri:6, instance:executeClass.ProductPageTestClass@78691363]">verifyDeleteFunctionalityOfProduct</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:13:38</td>   <td>-173925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyEditFunctionalityOfProduct()[pri:5, instance:executeClass.ProductPageTestClass@78691363]">verifyEditFunctionalityOfProduct</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:11:19</td>   <td>-313235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifyProductPageIsOpenedWhileClickingProductTab()[pri:1, instance:executeClass.ProductPageTestClass@78691363]">verifyProductPageIsOpenedWhileClickingProductTab</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:13:02</td>   <td>-210495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifySearchFunctionalityUsingProductCode()[pri:4, instance:executeClass.ProductPageTestClass@78691363]">verifySearchFunctionalityUsingProductCode</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/02/28 14:12:39</td>   <td>-232788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTestClass.verifySearchFunctionalityUsingProductName()[pri:3, instance:executeClass.ProductPageTestClass@78691363]">verifySearchFunctionalityUsingProductName</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
 </table>
